apps/sample-app/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app-prod
                port:
                  number: 80
